# life-copilot

./: .gitignore  AGENTS.md  README.md  docker-compose.yml  package.json
apps/api/: .env.example  Dockerfile  README.md  pyproject.toml
apps/api/app/: __init__.py  celery_app.py  config.py  db.py  main.py  model_provider.py  models.py  schemas.py  tasks.py
apps/api/tests/: test_smoke.py
apps/mobile/: App.tsx  README.md  app.json  package.json
docs/: api-contract.md  architecture.md  codex-tasks.md  product-spec.md
